crates/rondo-tui/tests/snapshots/snapshots__tasks_default.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
"┌──────────────────────────────────────────────────│ rondo - 0.1.0 │──────────────────────────14:14 · ◷ 1/2 · P— · ☑3  ┐"
"│  [1] TODAY  │  [2] TASKS  │  [3] JOURNAL  │  [4] FOCUS  │  [5] PLUGINS                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                      3 active · 1 done "
"┏━ tasks · 4 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌─ detail · #4 ─────────────────────────── pending · urg! ─┐"
"  ▌ ▌ ○  Refactor pomodoro module   ◖URG◗   ◖in 1d◗   bloc    Refactor pomodoro module                                  "
"    ▏ ○  Buy groceries   ◖low◗   ◖in 2d◗   #personal                                                                    "
"    ▍ ◐  Review API spec   ◖high◗   ◖today◗   ◔ 1/5   #bac    Status   ○  Pending                                       "
"    ▎ ✓  Deploy v2.1   ◖med◗   ◖overdue◗                      Priority ◖URG◗                                            "
"                                                              Due      ◖in 1d◗  2026-05-17                              "
"                                                              Tags     #refactor  ·  #work                              "
"                                                                                                                        "
"                                                              Description                                               "
"                                                              Pending until Review API spec done.                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                              Blocked by #1                                             "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────┘"
" [NOR]  [j/k → move] [l → detail] [a → add] [v → select] [/ → search]  · ? more                                         "
