crates/rondo-tui/tests/snapshots/snapshots__tasks_selected_second.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0       // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                  ⊙ ONLINE · HH:MM:SS · ◷ 1/2 · P— · ☑3 "
"┌─ navegación ───────────┐┏━ inbox · 3 tareas ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"│  [i] ◉ INBOX       3   │┃     ESTADO  PRI     TAREA                                                                  ┃"
"│  [t] ◷ HOY         1   │┃ ▌ ▌ [ ]  ◖URG◗  Refactor pomodoro module  ◖in 1d◗  blocked  #refactor #work                ┃"
"│  [p] ⏵ PRÓXIMAS    2   │┃   ▏ [ ]  ◖low◗  Buy groceries  ◖in 2d◗  #personal                                          ┃"
"│  [A] ◇ TODAS       4   │┃   ▍ [•]  ◖high◗  Review API spec  ◖today◗  ◔ 1/5  #backend #work                           ┃"
"└────────────────────────┘┃         ↳ Setup repo                                                                       ┃"
"┌─ filtros rápidos ──────┐┃                                                                                            ┃"
"│  [u] ! URGENTES    1   │┃                                                                                            ┃"
"│  [H] ↑ ALTA PRIO   2   │┃                                                                                            ┃"
"│  [o] ⌧ VENCIDAS        │┃                                                                                            ┃"
"│  [n] # SIN ETIQUETA 1  │┃                                                                                            ┃"
"│  [c] ✓ COMPLETADAS 1   │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃ PROGRESO GENERAL  [▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱] 25%   1/4     ┃"
"│                        │┃                                                                                            ┃"
"└────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌─ vista general ────┐┌─ próximas 7 días ──────────────┐┌─ distribución por tag ───────────┐┌─ sincronización ─────────┐"
"│                    ││    1    1    1                 ││   work      ▰▰▰▱▱▱▱▱▱▱▱▱   2 (33 ││  ESTADO     Conectado    │"
"│   4  TOTAL         ││    ██   ██   ██                ││   (sin tag) ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  ÚLTIMA     HH:MM:SS     │"
"│                    ││    ██   ██   ██                ││   backend   ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  PRÓXIMA    HH:MM:SS     │"
"│   ◑    1  Completa ││    ██   ██   ██                ││   personal  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  DISPOSIT.  1/1 local    │"
"│   ◐    1  En progr ││    ██   ██   ██                ││   refactor  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││                          │"
"│   ○    2  Pendient ││   16   17   18   19   20   21  ││                                  ││         ⌬                │"
"│   !    0  Vencidas ││                                ││                                  ││                          │"
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────┘└──────────────────────────┘"
" [NOR]  [j/k → move] [l → detail] [a → add] [v → select] [/ → search]  · ? more                                         "
