crates/rondo-tui/tests/snapshots/snapshots__visual_mode_multi_select.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0       // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                  ⊙ ONLINE · 14:25:48 · ◷ 1/2 · P— · ☑3 "
"┌─ navegación ───────┐┏━ inbox · 4 tareas ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"   ◉ INBOX       3          ESTADO  PRI     TAREA                                                                       "
"   ◷ HOY         1        ▌ [ ]  ◖URG◗  Refactor pomodoro module  ◖in 1d◗  blocked  #refactor #work                     "
"   ⏵ PRÓXIMAS    2      ▌ ▏ [ ]  ◖low◗  Buy groceries  ◖in 2d◗  #personal                                               "
"   ⛀ PROYECTOS   4      ● ▍ [•]  ◖high◗  Review API spec  ◖today◗  ◔ 1/5  #backend #work                                "
"   ◆ ETIQUETAS   4              ↳ Setup repo                                                                            "
"   ⊟ CALENDARIO         ● ▎ [x]  ◖med◗  Deploy v2.1  ◖overdue◗                                                          "
"   ▤ ANÁLISIS                                                                                                           "
"   ⌬ GRAFO                                                                                                              "
"   ⊳ AUTOMAT.                                                                                                           "
"   ✕ PAPELERA                                                                                                           "
"└────────────────────┘                                                                                                  "
"┌─ filtros ──────────┐                                                                                                  "
"   !  URGENTES                                                                                                          "
"   ↑  ALTA PRIO                                                                                                         "
"   @  ASIG. A MÍ                                                                                                        "
"   #  SIN ETIQUETA                                                                                                      "
"   ✓  COMPLETADAS                                                                                                       "
"   ◷  VENCIDAS          PROGRESO GENERAL  [▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱] 25%   1/4      "
"                                                                                                                        "
"└────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌─ vista general ────┐┌─ próximas 7 días ──────────────┐┌─ distribución por tag ───────────┐┌─ sincronización ─────────┐"
"                           1    1    1                      work      ▰▰▰▱▱▱▱▱▱▱▱▱   2 (33     ESTADO     Conectado     "
"    4  TOTAL               ██   ██   ██                     (sin tag) ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16     ÚLTIMA     14:25:48      "
"                           ██   ██   ██                     backend   ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16     PRÓXIMA    14:30:48      "
"    ◑    1  Completa       ██   ██   ██                     personal  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16     DISPOSIT.  1/1 local     "
"    ◐    1  En progr       ██   ██   ██                     refactor  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16                              "
"    ○    2  Pendient      16   17   18   19   20   21                                                 ⌬                 "
"    !    0  Vencidas                                                                                                    "
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────┘└──────────────────────────┘"
" [VIS·2]  [j/k → extend] [d → bulk done] [P → bulk prio] [Esc → cancel] [: → cmd]  · ? more                             "
